--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,9 +14,11 @@ jobs:
 
       - name: Inject Firebase Config
         run: |
+          echo "Secrets: API_KEY=${{ secrets.FIREBASE_API_KEY }}, AUTH_DOMAIN=${{ secrets.FIREBASE_AUTH_DOMAIN }}, PROJECT_ID=${{ secrets.FIREBASE_PROJECT_ID }}"
           sed -i "s|YOUR_API_KEY|${{ secrets.FIREBASE_API_KEY }}|" index.html
           sed -i "s|your-project-id.firebaseapp.com|${{ secrets.FIREBASE_AUTH_DOMAIN }}|" index.html
           sed -i "s|your-project-id|${{ secrets.FIREBASE_PROJECT_ID }}|" index.html
+          cat index.html  # Debug: Output the modified file
         shell: bash
 
       - name: Deploy to GitHub Pages
