--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,24 +20,44 @@ jobs:
 
       - name: Inject Firebase config into index.html
         run: |
-          set -euo pipefail
-          echo "Checking secrets availability..."
-          echo "API_KEY length: ${#FIREBASE_API_KEY}"
-          echo "AUTH_DOMAIN length: ${#FIREBASE_AUTH_DOMAIN}"
-          echo "PROJECT_ID length: ${#FIREBASE_PROJECT_ID}"
+          echo "=== DEBUGGING SECRET INJECTION ==="
+          echo "Current working directory: $(pwd)"
+          echo "Files in directory: $(ls -la)"
           
-          echo "Before replacement:"
+          echo "=== CHECKING SECRETS ==="
+          if [ -z "${FIREBASE_API_KEY:-}" ]; then
+            echo "ERROR: FIREBASE_API_KEY is not set or empty!"
+            exit 1
+          else
+            echo "FIREBASE_API_KEY is set (length: ${#FIREBASE_API_KEY})"
+          fi
+          
+          if [ -z "${FIREBASE_AUTH_DOMAIN:-}" ]; then
+            echo "ERROR: FIREBASE_AUTH_DOMAIN is not set or empty!"
+            exit 1
+          else
+            echo "FIREBASE_AUTH_DOMAIN is set (length: ${#FIREBASE_AUTH_DOMAIN})"
+          fi
+          
+          if [ -z "${FIREBASE_PROJECT_ID:-}" ]; then
+            echo "ERROR: FIREBASE_PROJECT_ID is not set or empty!"
+            exit 1
+          else
+            echo "FIREBASE_PROJECT_ID is set (length: ${#FIREBASE_PROJECT_ID})"
+          fi
+          
+          echo "=== BEFORE REPLACEMENT ==="
           grep -A 5 "apiKey:" index.html
           
-          # Use more precise sed commands to avoid substring replacement issues
+          echo "=== PERFORMING REPLACEMENTS ==="
           sed -i "s|YOUR_API_KEY|${FIREBASE_API_KEY}|g" index.html
           sed -i "s|your-project-id\.firebaseapp\.com|${FIREBASE_AUTH_DOMAIN}|g" index.html
           sed -i "s|\"your-project-id\"|${FIREBASE_PROJECT_ID}|g" index.html
           
-          echo "After replacement:"
+          echo "=== AFTER REPLACEMENT ==="
           grep -A 5 "apiKey:" index.html
           
-          echo "Verification - checking if replacements worked:"
+          echo "=== FINAL VERIFICATION ==="
           if grep -q "YOUR_API_KEY" index.html; then
             echo "ERROR: YOUR_API_KEY was not replaced!"
             exit 1
@@ -46,7 +66,7 @@ jobs:
             echo "ERROR: your-project-id was not replaced!"
             exit 1
           fi
-          echo "All replacements successful!"
+          echo "SUCCESS: All replacements completed!"
         shell: bash
 
       - name: Deploy to GitHub Pages
