--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -69,8 +69,18 @@ jobs:
           echo "SUCCESS: All replacements completed!"
         shell: bash
 
+      - name: Verify modified files
+        run: |
+          echo "=== VERIFYING MODIFIED FILES ==="
+          echo "Title in index.html:"
+          grep "<title>" index.html
+          echo "Firebase config in index.html:"
+          grep -A 5 "apiKey:" index.html
+        shell: bash
+
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: .
+          force_orphan: true
