--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -79,8 +79,11 @@ jobs:
         shell: bash
 
       - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: .
-          force_orphan: true
+        run: |
+          echo "=== DEPLOYING TO GH-PAGES ==="
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          git add .
+          git commit -m "Deploy with Firebase config" || echo "No changes to commit"
+          git push origin HEAD:gh-pages --force
+        shell: bash
