updating code to meet current requirements

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,22 +8,21 @@ on:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-
-    env:
-      FIREBASE_API_KEY: ${{ secrets.FIREBASE_API_KEY }}
-      FIREBASE_AUTH_DOMAIN: ${{ secrets.FIREBASE_AUTH_DOMAIN }}
-      FIREBASE_PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID }}
-
     steps:
-      - name: Checkout Code
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Inject Firebase config into index.html
+      - name: Inject Firebase Config
         run: |
-          set -euo pipefail
-          sed -i "s|YOUR_API_KEY|${FIREBASE_API_KEY}|" index.html
-          sed -i "s|your-project-id.firebaseapp.com|${FIREBASE_API_KEY}|" index.html
-          sed -i "s|your-project-id|${FIREBASE_API_KEY}|" index.html
+          if [ -z "${{ secrets.FIREBASE_API_KEY }}" ] || [ -z "${{ secrets.FIREBASE_AUTH_DOMAIN }}" ] || [ -z "${{ secrets.FIREBASE_PROJECT_ID }}" ]; then
+            echo "Error: One or more secrets are missing or empty"
+            exit 1
+          fi
+          echo "Secrets available: API_KEY=${{ secrets.FIREBASE_API_KEY }}, AUTH_DOMAIN=${{ secrets.FIREBASE_AUTH_DOMAIN }}, PROJECT_ID=${{ secrets.FIREBASE_PROJECT_ID }}"
+          sed -i "s|YOUR_API_KEY|${{ secrets.FIREBASE_API_KEY }}|" index.html
+          sed -i "s|your-project-id.firebaseapp.com|${{ secrets.FIREBASE_AUTH_DOMAIN }}|" index.html
+          sed -i "s|your-project-id|${{ secrets.FIREBASE_PROJECT_ID }}|" index.html
+          cat index.html  # Debug: Output the modified file
         shell: bash
 
       - name: Deploy to GitHub Pages
