Fix sed commands in GitHub Actions workflow
- Add global flag (g) to sed commands to ensure all instances are replaced
- This should properly inject Firebase configuration during deployment

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,12 +30,12 @@ jobs:
             ls -l
             exit 1
           fi
-          sed -i "s|YOUR_API_KEY|${{ secrets.FIREBASE_API_KEY }}|" index.html || { echo "sed failed for API_KEY"; exit 1; }
-          sed -i "s|your-project-id.firebaseapp.com|${{ secrets.FIREBASE_AUTH_DOMAIN }}|" index.html || { echo "sed failed for AUTH_DOMAIN"; exit 1; }
-          sed -i "s|your-project-id|${{ secrets.FIREBASE_PROJECT_ID }}|" index.html || { echo "sed failed for PROJECT_ID"; exit 1; }
-          sed -i "s|YOUR_APP_ID|${{ secrets.FIREBASE_APP_ID }}|" index.html || { echo "sed failed for APP_ID"; exit 1; }
-          sed -i "s|YOUR_STORAGE_BUCKET|${{ secrets.FIREBASE_STORAGE_BUCKET }}|" index.html || { echo "sed failed for STORAGE_BUCKET"; exit 1; }
-          sed -i "s|YOUR_MESSAGING_SENDER_ID|${{ secrets.FIREBASE_MESSAGING_SENDER_ID }}|" index.html || { echo "sed failed for MESSAGING_SENDER_ID"; exit 1; }
+          sed -i "s|YOUR_API_KEY|${{ secrets.FIREBASE_API_KEY }}|g" index.html || { echo "sed failed for API_KEY"; exit 1; }
+          sed -i "s|your-project-id.firebaseapp.com|${{ secrets.FIREBASE_AUTH_DOMAIN }}|g" index.html || { echo "sed failed for AUTH_DOMAIN"; exit 1; }
+          sed -i "s|your-project-id|${{ secrets.FIREBASE_PROJECT_ID }}|g" index.html || { echo "sed failed for PROJECT_ID"; exit 1; }
+          sed -i "s|YOUR_APP_ID|${{ secrets.FIREBASE_APP_ID }}|g" index.html || { echo "sed failed for APP_ID"; exit 1; }
+          sed -i "s|YOUR_STORAGE_BUCKET|${{ secrets.FIREBASE_STORAGE_BUCKET }}|g" index.html || { echo "sed failed for STORAGE_BUCKET"; exit 1; }
+          sed -i "s|YOUR_MESSAGING_SENDER_ID|${{ secrets.FIREBASE_MESSAGING_SENDER_ID }}|g" index.html || { echo "sed failed for MESSAGING_SENDER_ID"; exit 1; }
           echo "Verifying changes in index.html..."
           grep -E "apiKey|authDomain|projectId|appId" index.html
           echo "Modified index.html after injection:"
