Fix GitHub Pages deployment to use main branch
- Change deployment to commit directly to main branch
- This ensures GitHub Pages serves the files with injected Firebase config
- Remove gh-pages dependency since GitHub Pages uses main branch

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,8 +42,10 @@ jobs:
           cat index.html
         shell: bash
 
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: .
+      - name: Commit and push changes
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          git add index.html
+          git commit -m "Deploy: Inject Firebase configuration" || exit 0
+          git push
