Add add-hide-people-from-count branch to dev deployment
- Enable dev deployment for hide/show feature branch
- Allows testing new features on dev server

--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - wait-list-feature
+      - add-hide-people-from-count
 
 jobs:
   build-and-deploy-dev:
@@ -49,3 +50,4 @@ jobs:
           publish_dir: .
           publish_branch: gh-pages
           destination_dir: dev
+
